Removed unused code, removed commented out code, switched to use generics
Moved main to SwingUtilities.invokeLater
# 1.03.00 (38027) Jan 11, 2010
1/11/10 public version for milestone "full redeploy, 2010 Q1"
# 1.02.01 (37378) Dec 11, 2009
12/11/09 test version for milestone "full redeploy, 2010 Q1"
# 1.02.00 (30671) Apr 21, 2009
4/21/09 Batch deploy as part of IOM milestone with revision 30670
# 1.01.02 (29629) Mar 22, 2009
3/22/09 Batch deploy for Alpha Simulation Tests 2, svn 29628
# 1.01.01 (28815) Feb 19, 2009
Batch deploy for alpha Simulation Tests, svn 28773